# past_projects

./: .gitattributes  .gitmodules  README.md
2017-08_Startup_simulation/: README.md
2018-06_Cryptography_literature_review/: Criptography - Presentation.pptx  README.md
2019-11_House_alarm_network/: House alarm - Final network.circ  README.md
2020-06_Stabilizing_system_control/: Control - Live Script.mlx  Control - Scenario 3.slx  Control - Scenario 6.slx  README.md
2020-12_Electric_drive_Simulink/: LED - Simulink scheme.slx  README.md
2020-12_PLC_elevator_control/: README.md
2020_12_Electric_drive_Simulink/: README.md
2020_12_PLC_elevator_control/: Elevator - Project Code.project  README.md
2021-07_2D_ball_robot/: README.md
2021-07_2D_ball_robot/2D_BBR - Horizontal_rolling/: Horizontal_Rolling_Tongji.m  Horizontal_Rolling_Tongji_Control.slx  Horizontal_Rolling_Tongji_Model.slx  README.md
2021-07_2D_ball_robot/2D_BBR - Vertical_rolling/: README.md  Vertical_Rolling_Tongji.m  Vertical_rolling_Tongji_Control.slx  Vertical_rolling_Tongji_Model.slx
2021-11_Neural_network_car/: README.md
2021-11_Neural_network_car/NNcar - Project files/: RO47002-final-assignment-2021.ipynb  my_keras_model.h5
2021-11_Neural_network_car/NNcar - Project files/best_model/: saved_model.pb
2021-11_Neural_network_car/NNcar - Project files/best_model/variables/: variables.data-00000-of-00001  variables.index
2021-11_Obstacle_pedestrian_navigation/: README.md
2022-01_Business_plan_startup/: README.md
2022-01_Path_planning_manipulator/: README.md
2022-01_Path_planning_manipulator/Planning - Code/: create_hospital.py  drawing_functions.py  geometry.py  get_edges_weights.py  graph_search.py  main.py  my_path.py  neighbor_functions.py  obstacles.py  random_goal.py  roomba.py  rrt_star_complete.py  traj_smooth.py
2022-01_Pedestrian_recognition/: README.md
2022-01_Pedestrian_recognition/Pedestrian - Setup/: 01-activate.sh  02-start-notebook.sh  84-check-data-folder-structure.sh
2022-01_Pedestrian_recognition/Pedestrian - assignment/: fa_00_overview.ipynb  fa_01a_data_visualization.ipynb  fa_02b_mp_only_3d_pedestrian_detection_multiple_sensors.ipynb  validation_metrics.py
2022-01_Pedestrian_recognition/assignment/: fa_02a_3d_pedestrian_detection_single_camera.ipynb  solution_helpers.py  tracked-pedestrian-states.npz
2022-01_Pedestrian_recognition/setup/: 01-activate.bat  82-assemble-data-for-students.filelist  90-docker-build-image.sh  92-docker-start-notebook.sh  Dockerfile  environment.yml  installation_instructions.md  pyproject.toml
2022-04_Einstein_riddle_TIAGo/: README.md
2022-04_Einstein_riddle_TIAGo/Einstein - Code/: README.md
2022-04_Einstein_riddle_TIAGo/Einstein - Code/bash_scripts/: prepare_tiago_build_catkin.sh  prepare_tiago_no_build.sh  run_singularity.sh  set_goals_old.sh  solve_the_planning.sh
2022-04_Einstein_riddle_TIAGo/Einstein - Code/retail_store_simulation/: README.md
2022-04_Einstein_riddle_TIAGo/Einstein - Code/retail_store_simulation/worlds/: krr_warehouse.world
2022-04_Einstein_riddle_TIAGo/Einstein - Code/retail_store_skills/: README.md
2022-04_Einstein_riddle_TIAGo/Einstein - Code/rosprolog_our_project/: CMakeLists.txt  package.xml
2022-04_Einstein_riddle_TIAGo/Einstein - Code/rosprolog_our_project/launch/: prolog_our_project_query.launch
2022-04_Einstein_riddle_TIAGo/Einstein - Code/rosprolog_our_project/src/: __init__.pl  our_riddle.pl  prolog_our_project_query.py
2022-04_Ethical_paper_PARO/: README.md
2022-04_Haptic_shooting_range/: README.md
2022-04_Haptic_shooting_range/Haply - Code/: README.md
2022-04_Review_symmetries_RL/: README.md
2022-06_TIAGo_supermarket/: README.md
2022-06_TIAGo_supermarket/TIAGo - Repository/: README.md
2022-06_TIAGo_supermarket/TIAGo - Repository/custom_msgs/: CMakeLists.txt  README.md  package.xml
2022-06_TIAGo_supermarket/TIAGo - Repository/custom_msgs/msg/: Param_list.msg
2022-06_TIAGo_supermarket/TIAGo - Repository/custom_msgs/srv/: is_human.srv
2022-06_TIAGo_supermarket/TIAGo - Repository/detection/: CMakeLists.txt  README.md  package.xml
2022-06_TIAGo_supermarket/TIAGo - Repository/detection/src/: detection.cpp
2022-06_TIAGo_supermarket/TIAGo - Repository/dyn_reconf_mdp/: CMakeLists.txt  README.md  package.xml
2022-06_TIAGo_supermarket/TIAGo - Repository/dyn_reconf_mdp/cfg/: tiago_mdp.cfg
2022-06_TIAGo_supermarket/TIAGo - Repository/dyn_reconf_mdp/include/dyn_reconf_mdp/: dyn_pub.h  param_client.h
2022-06_TIAGo_supermarket/TIAGo - Repository/dyn_reconf_mdp/nodes/: client_test.cpp  server.cpp
2022-06_TIAGo_supermarket/TIAGo - Repository/dyn_reconf_mdp/src/: dyn_pub.cpp  param_client.cpp
2022-06_TIAGo_supermarket/TIAGo - Repository/grocery_store_utils/: README.md
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_director/: CMakeLists.txt  README.md  package.xml
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_director/launch/: director.launch
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_director/src/: tiago_director.cpp
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_gui/: CMakeLists.txt  README.md  package.xml
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_gui/include/tiago_gui/: my_terminal.h  my_terminal.ui  qledlabel.h
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_gui/launch/: gui.launch
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_gui/nodes/: talker.cpp  tiago_gui.cpp
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_gui/src/: my_terminal.cpp  qledlabel.cpp
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_tts/: CMakeLists.txt  README.md  package.xml
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_tts/launch/: tts.launch
2022-06_TIAGo_supermarket/TIAGo - Repository/tiago_tts/scripts/: tts_client_topic.py  tts_client_topic_real_robot.py
2022-08_Lunar_lander_learning/: Lander - Code.py  README.md
2023-04_Sierpiński_triangle_generator/: README.md  Sierpiński - Code.py
2024-03_Model_learning_quadrupeds/: README.md
2024-03_Model_learning_quadrupeds/Thesis - Code/data/a1_sim/: a1_sim_jump_dataset.csv  (+2 more)
(+58 files in other folders)
