<?xml version="1.0"?>
<package format="2">
  <name>tiago_gui</name>
  <version>0.0.0</version>
  <description>The tiago_gui package</description>
  <maintainer email="rubenmr@todo.todo">rubenmr</maintainer>
  <license>TODO</license>


  <depend>roscpp</depend> -->
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>message_generation</depend>
  <depend>rosconsole</depend>
  <depend>roscpp_serialization</depend>
  <depend>rostime</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <build_depend>custom_msgs</build_depend>
  <exec_depend>custom_msgs</exec_depend>
  <build_depend>dyn_reconf_mdp</build_depend>
  <exec_depend>dyn_reconf_mdp</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
