<?xml version="1.0"?>
<package format="2">
  <name>tiago_tts</name>
  <version>0.0.0</version>
  <description>The tiago_tts package</description>
  <maintainer email="rmartinrodrigu@tudelft.nl">Ruben MR</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tts</depend>
  <depend>sound_play</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
